# Database

./: .gitignore  README.md  pyproject.toml
src/auto_data_fetch/: binance_liquidations.py  cli.py  config.py  db.py  exchanges.py  ingestion.py  models.py  quality.py  seeding.py  time_utils.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/chart/: route.ts
web/app/api/derivatives/: route.ts
web/app/api/status/: route.ts
web/app/api/watchlist/: route.ts
web/components/: Dashboard.tsx  MarketChart.tsx
web/lib/: db.ts  env.ts  market-data.ts  types.ts
